k3s-cloudflared/cloudflared.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-cloudflare-tunnel-remote
  namespace: cloudflared
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      pod: cloudflared
  template:
    metadata:
      labels:
        pod: cloudflared
    spec:
      containers:
        - command:
            - cloudflared
            - tunnel
            - '--no-autoupdate'
            - '--metrics'
            - '0.0.0.0:2000'
            - run
          image: 'cloudflare/cloudflared:2024.8.2'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /ready
              port: 2000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: cloudflared
      serviceAccount: cloudflared-cloudflare-tunnel-remote
